--- a/playbooks/bootstrap/bootstrap-docker.yml
+++ b/playbooks/bootstrap/bootstrap-docker.yml
@@ -8,17 +8,29 @@
   tasks:
     - name: removing old docker software
       ansible.builtin.command: "apt purge -yq docker-ce docker-ce-cli containerd.io docker docker-engine docker.io containerd runc"
+      when: 
+        - docker not in ansible_facts.packages
     - name: download docker install runfile
       get_url:
         url: https://get.docker.com
         force: true
         dest: /root/get-docker.sh
         mode: '0100'
+      when: 
+        - docker not in ansible_facts.packages
     - name: execute docker installation script
       ansible.builtin.command: /root/get-docker.sh
+      when: 
+        - docker not in ansible_facts.packages
     - name: set docker group permissions
       ansible.builtin.command: groupadd docker
+      when: 
+        - docker not in ansible_facts.packages
     - name: set docker user permissions
       ansible.builtin.command: usermod -aG docker {{ ansible_user }}
+      when: 
+        - docker not in ansible_facts.packages
     - name: Reboot the server
       reboot:
+      when: 
+        - docker not in ansible_facts.packages
