--- a/playbooks/bootstrap/bootstrap-nvidia.yml
+++ b/playbooks/bootstrap/bootstrap-nvidia.yml
@@ -13,6 +13,8 @@
       ansible.builtin.command: bash -c "echo blacklist nouveau > /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
     - name: disable nouveau driver 2
       ansible.builtin.command: bash -c "echo options nouveau modeset=0 >> /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
+      notify:
+      - update-initramfs
     - name: Reboot the server for modprobe changes
       reboot:
     - name: download driver install runfile
