--- a/playbooks/bootstrap/bootstrap-nvidia.yml
+++ b/playbooks/bootstrap/bootstrap-nvidia.yml
@@ -13,8 +13,8 @@
       ansible.builtin.command: bash -c "echo blacklist nouveau > /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
     - name: disable nouveau driver 2
       ansible.builtin.command: bash -c "echo options nouveau modeset=0 >> /etc/modprobe.d/blacklist-nvidia-nouveau.conf"
-      notify:
-      - update-initramfs
+    - name: disable nouveau - update initramfs
+      ansible.builtin.command: update-initramfs -u
     - name: Reboot the server for modprobe changes
       reboot:
     - name: download driver install runfile
