added some base images

--- a/playbooks/mlops.yml
+++ b/playbooks/mlops.yml
@@ -27,6 +27,6 @@
   tags:
     - bootstrap
 
-- include: submodules/data-science.yml
+- include: base-images/data-science.yml
   tags:
     - docker-compose
