--- a/playbooks/bootstrap/bootstrap-nvidia.yml
+++ b/playbooks/bootstrap/bootstrap-nvidia.yml
@@ -33,6 +33,19 @@
         autoremove: yes
         force_apt_get: yes
         only_upgrade: yes
+    - name: install nvidia container runtime repo
+      apt_key:
+        url: https://nvidia.github.io/nvidia-container-runtime/gpgkey
+        state: present
+    - name: get distribution on host
+      shell: . /etc/os-release;echo $ID$VERSION_ID
+      register: distribution
+    - name: add repo nvidia list
+      shell: curl -s -L https://nvidia.github.io/nvidia-container-runtime/{{ distribution.stdout }}/nvidia-container-runtime.list | tee /etc/apt/sources.list.d/nvidia-container-runtime.list
+      name: install nvidia-container-runtime
+      apt:
+        pkg:
+          - nvidia-container-runtime
     - name: Reboot the server once more
       reboot:
     - name: test GPUs
