--- a/playbooks/bootstrap/bootstrap-apt.yml
+++ b/playbooks/bootstrap/bootstrap-apt.yml
@@ -33,8 +33,8 @@
         state: build-dep
         upgrade: safe
     - name: custom bashrc
-      copy:
-        content: "bashrc"
+      ansible.builtin.copy:
+        src: bashrc
         dest: "/etc/bash.bashrc"
         owner: "root"
         group: "root"
