update docker-compose indent error

--- a/playbooks/bootstrap/bootstrap-apt.yml
+++ b/playbooks/bootstrap/bootstrap-apt.yml
@@ -34,11 +34,10 @@
         upgrade: safe
     - name: custom bashrc
       ansible.builtin.copy:
-        src: "{{ item }}"
+        src: "{{ playbook_dir }}/bashrc"
         dest: "/etc/bash.bashrc"
         owner: "root"
         group: "root"
         mode: "0100"
-      with_items: "{{ playbook_dir }}/bashrc"
     - name: Reboot the server once more
       reboot:
