--- a/playbooks/bootstrap/bootstrap-apt.yml
+++ b/playbooks/bootstrap/bootstrap-apt.yml
@@ -34,7 +34,7 @@
         upgrade: safe
     - name: custom bashrc
       ansible.builtin.copy:
-        src: "{{ playbook_dir }}/bashrc"
+        src: "{{ playbook_dir | dirname }}/bashrc"
         dest: "/etc/bash.bashrc"
         owner: "root"
         group: "root"
