updated facts roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = ./config/inventory
+roles_path = ./roles
 host_key_checking = False
 gathering = smart
 fact_caching = jsonfile
