mods to raid and Apt

--- a/playbooks/base-images/data-science.yml
+++ b/playbooks/base-images/data-science.yml
@@ -8,6 +8,8 @@
   tasks:
     - name: update submodules
       ansible.builtin.command: git clone https://github.com/tuttlebr/kubeflow-servers.git /kubeflow-servers
+    - name: update MLEs
+      ansible.builtin.command: git clone https://github.com/NVIDIA/DeepLearningExamples.git /DeepLearningExamples
     - name: running docker compose
       args:
         chdir: /kubeflow-servers
