--- a/playbooks/bootstrap/bootstrap-docker.yml
+++ b/playbooks/bootstrap/bootstrap-docker.yml
@@ -2,7 +2,7 @@
 - hosts: all
   name: Setup Docker
   become: true
-  become_user: {{ ansible_user }}
+  become_user: brandon
   ignore_errors: true
   tags:
   - docker
